--- a/backend/dogbox-oms/pom.xml
+++ b/backend/dogbox-oms/pom.xml
@@ -9,10 +9,10 @@
     </parent>
 
     <groupId>com.lanzonprojects</groupId>
-    <artifactId>notes-keeper</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>notes-keeper</name>
-    <description>Backend solution for the notes-maker tool</description>
+    <artifactId>dogbox-oms</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <name>dogbox-oms</name>
+    <description>API for DogBox Order Management System.</description>
 
     <properties>
         <h2.version>1.4.191</h2.version>
@@ -110,7 +110,7 @@
                         <configuration>
                             <jdbc>
                                 <driver>org.h2.Driver</driver>
-                                <url>jdbc:h2:~/notes-keeper</url>
+                                <url>jdbc:h2:~/dogbox-oms</url>
                             </jdbc>
                             <generator>
                                 <name>org.jooq.util.DefaultGenerator</name>
