--- a/backend/dogbox-oms/pom.xml
+++ b/backend/dogbox-oms/pom.xml
@@ -120,7 +120,7 @@
                                     <excludes />
                                     <inputSchema>PUBLIC</inputSchema>
                                 </database>
-                                <packageName>com.lanzonprojects.noteskeeper.jooq.generated</packageName>
+                                <packageName>com.lanzonprojects.omsapi.jooq.generated</packageName>
                                 <directory>src/main/java/</directory>
                             </generator>
                         </configuration>
@@ -165,7 +165,7 @@
                                     <inputSchema>notemaker</inputSchema>
                                 </database>
                                 <target>
-                                    <packageName>com.lanzonprojects.noteskeeper.jooq.generated</packageName>
+                                    <packageName>com.lanzonprojects.omsapi.jooq.generated</packageName>
                                     <directory>src/main/java/</directory>
                                 </target>
                             </generator>
