Further renaming and began API
1. Further renaming of connection strings, files and directories where necessary.
2. Began implementing the API based on the ERD.

--- a/backend/dogbox-oms/pom.xml
+++ b/backend/dogbox-oms/pom.xml
@@ -152,7 +152,7 @@
                         <configuration>
                             <jdbc>
                                 <driver>com.mysql.cj.jdbc.Driver</driver>
-                                <url>jdbc:mysql://localhost:3306/notemaker?serverTimezone=UTC&amp;useSSL=false</url>
+                                <url>jdbc:mysql://localhost:3306/dogbox-oms?serverTimezone=UTC&amp;useSSL=false</url>
                                 <user>root</user>
                                 <password>root</password>
                             </jdbc>
@@ -162,7 +162,7 @@
                                     <name>org.jooq.util.mysql.MySQLDatabase</name>
                                     <includes>.*</includes>
                                     <excludes />
-                                    <inputSchema>notemaker</inputSchema>
+                                    <inputSchema>dogbox-oms</inputSchema>
                                 </database>
                                 <target>
                                     <packageName>com.lanzonprojects.omsapi.jooq.generated</packageName>
