Added to API and started SQL scripts
1. Added all required resources excluding order related tables for the API.
2. Began implementing the SQL scripts to create the database to hook up the API.
3. Forcing a name for the built JAR file within `pom.xml`.

--- a/backend/dogbox-oms/pom.xml
+++ b/backend/dogbox-oms/pom.xml
@@ -201,6 +201,7 @@
                 </executions>
             </plugin>
         </plugins>
+        <finalName>docker-dogbox-oms</finalName>
     </build>
 
 </project>
