--- a/backend/dogbox-oms/src/main/resources/application.properties
+++ b/backend/dogbox-oms/src/main/resources/application.properties
@@ -6,6 +6,9 @@ spring.datasource.password=root
 spring.datasource.initialize=false
 spring.datasource.continueOnError=true
 
+#Tomcat Server Configuration
+server.port=8085
+
 #Database Configuration
 db.driver=com.mysql.cj.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/dogbox-oms?serverTimezone=UTC
