--- a/backend/dogbox-oms/src/main/resources/application.properties
+++ b/backend/dogbox-oms/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Spring DataSource Configuration
 spring.datasource.driver=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/dogbox-oms?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/dogbox_oms?serverTimezone=UTC
 spring.datasource.user=root
 spring.datasource.password=root
 spring.datasource.initialize=false
@@ -11,7 +11,7 @@ server.port=8085
 
 #Database Configuration
 db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/dogbox-oms?serverTimezone=UTC
+db.url=jdbc:mysql://localhost:3306/dogbox_oms?serverTimezone=UTC
 db.user=root
 db.password=root
 
