Commented out failing code, updated schema and code
1. Commented out failing relationship repository until the remaining repositories are implemented to test.
2. Updated the schema to fix some incorrect indexes and foreign key links.
3. Refactoring code.

--- a/backend/dogbox-oms/src/main/resources/application.yml
+++ b/backend/dogbox-oms/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 crnk:
   resourcePackage: com.lanzonprojects.omsapi.domain
   domainName: http://localhost:8081/lanzonprojects
-  pathPrefix: /api
+  pathPrefix: /api/oms
   default-page-limit: 20
 
 server:
