Updated dependencies, changed crnk config
1. Updated springboot to version 2.19.
2. Introduced new crnk dependencie to change the way `CrnkBoot` is configured in Spring Boot.
3. Attempting to extend CrnkServlet to add customization (still doesn not seem to work).
4. Updated insert scripts for schema.

--- a/backend/dogbox-oms/src/main/resources/application.properties
+++ b/backend/dogbox-oms/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.datasource.continueOnError=true
 
 #Tomcat Server Configuration
 server.port=8085
+server.servlet.context-path=/lanzonprojects
 
 #Database Configuration
 db.driver=com.mysql.cj.jdbc.Driver
