--- a/backend/dogbox-oms/pom.xml
+++ b/backend/dogbox-oms/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.9.RELEASE</version>
+        <version>2.1.9.RELEASE</version>
     </parent>
 
     <groupId>com.lanzonprojects</groupId>
@@ -21,7 +21,7 @@
         <mysql.version>8.0.11</mysql.version>
         <okhttp.version>3.9.1</okhttp.version>
         <sql-maven.version>1.5</sql-maven.version>
-        <crnk.version>2.4.20171211095351</crnk.version>
+        <crnk.version>3.1.20191113192440</crnk.version>
         <google-guava.version>28.0-jre</google-guava.version>
         <maven-properties.version>1.0.0</maven-properties.version>
     </properties>
@@ -68,7 +68,22 @@
         </dependency>
         <dependency>
             <groupId>io.crnk</groupId>
-            <artifactId>crnk-spring</artifactId>
+            <artifactId>crnk-setup-spring-boot2</artifactId>
+            <version>${crnk.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.crnk</groupId>
+            <artifactId>crnk-home</artifactId>
+            <version>${crnk.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.crnk</groupId>
+            <artifactId>crnk-meta</artifactId>
+            <version>${crnk.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.crnk</groupId>
+            <artifactId>crnk-validation</artifactId>
             <version>${crnk.version}</version>
         </dependency>
         <dependency>
@@ -84,6 +99,14 @@
             <version>${okhttp.version}</version>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>jcenter-repository</id>
+            <name>JCenter</name>
+            <url>https://jcenter.bintray.com/</url>
+        </repository>
+    </repositories>
 
     <profiles>
         <profile>
