--- a/frontend/order-management-system/package.json
+++ b/frontend/order-management-system/package.json
@@ -9,6 +9,8 @@
     "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
     "typeface-roboto": "0.0.75"
   },
@@ -33,7 +35,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8081",
+  "proxy": "http://localhost:8085",
   "devDependencies": {
     "@testing-library/jest-dom": "^4.1.0",
     "@testing-library/react": "^9.1.3",
