--- a/backend/dogbox-oms/src/main/resources/application.properties
+++ b/backend/dogbox-oms/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Spring DataSource Configuration
 spring.datasource.driver=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/dogbox_oms?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/dogbox_oms?serverTimezone=UTC&useSSL=false
 spring.datasource.user=root
 spring.datasource.password=root
 spring.datasource.initialize=false
@@ -12,7 +12,7 @@ server.servlet.context-path=/lanzonprojects
 
 #Database Configuration
 db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/dogbox_oms?serverTimezone=UTC
+db.url=jdbc:mysql://localhost:3306/dogbox_oms?serverTimezone=UTC&useSSL=false
 db.user=root
 db.password=root
 
